[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "DifyTools"
version = "0.0.1"
description = "DifyTools: 包含 Dify 和 Ragflow 工具"
readme = {file = "README.md", content-type = "text/markdown"}
license = "MIT"
authors = [{name = "Lingwuxin", email = "junzikeqi@email.com"}]
requires-python = ">=3.7"
dependencies = [
    "requests>=2.25.1"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent"
]

[project.urls]
"Homepage" = "https://github.com/Lingwuxin/DifyTools"
"Bug Tracker" = "https://github.com/Lingwuxin/DifyTools/issues"

[tool.setuptools.packages.find]
include = ["dify*", "ragflow*", "tools*"]