[metadata]
name = DifyTools
version = 0.1.0
author = Lingwuxin
author_email = your@email.com
description = DifyTools: 包含 Dify 和 Ragflow 工具
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Lingwuxin/DifyTools
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True

[options.package_data]
* = *.txt, *.md
